--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install pytest pyyaml
+        run: |
+          pip install -r requirements.txt
+          pip install pip-audit
+      - name: Security scan
+        run: pip-audit
       - name: Run tests
         run: pytest tests/ -v
